--- a/_weather.sass
+++ b/_weather.sass
@@ -13,7 +13,7 @@
             margin: 25px 0
         input
             border-radius: 20px
-            padding: 8px 0
+            padding: 8px 3px
         #btn
             border-radius: 20px
             background-color: #79afff
