--- a/_weather.sass
+++ b/_weather.sass
@@ -1,6 +1,7 @@
-#weather 
+#weather
     margin: 100px 0
     .box
+        min-width: 250px
         border-radius: 20px
         width: 80%
         background-color: #a4caff
@@ -13,7 +14,7 @@
             margin: 25px 0
         input
             border-radius: 20px
-            padding: 8px 3px
+            padding: 8px 10px
         #btn
             border-radius: 20px
             background-color: #79afff
@@ -24,3 +25,7 @@
             display: block
             color: #ffffff
             font-size: 20px
+
+    @media screen and ( max-width: 768px )
+        .box
+            max-width: 250px
